--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   go_router: ^13.0.0
   carousel_slider: ^4.2.1
   star_rating: ^0.11.0
+  flexi_image_slider: ^1.0.8
 
 dev_dependencies:
   flutter_test:
