--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   firebase_storage: ^11.5.6
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
-  google_fonts: ^6.1.0
+  google_fonts: 4.0.4
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   go_router: ^13.0.0
   carousel_slider: ^4.2.1
   star_rating: ^0.11.0
   flexi_image_slider: ^1.0.8
+  email_sender: ^1.3.3
 
 dev_dependencies:
   flutter_test:
