--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   star_rating: ^0.11.0
   flexi_image_slider: ^1.0.8
   email_sender: ^1.3.3
+  razorpay_flutter: ^1.3.6
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
